# Compare-TwoPDFs-Python

./: .gitignore  README.md  compare_pdfs.py  compare_pdfs_text.py  compare_pdfs_util.py  digit_tests.py  find_common_substrings.py  get_file_data.py  importance_score.py  pdf_duplicate_pages.py  pdf_to_img.py  pyproject.toml  requirements.txt  result_json_to_training_csv.py  run_and_store_cross_pairs.py  show_similarity_rectangles.py  train_result_classifiers.py
.github/workflows/: pytest.yml
src/: compare_pdfs_text.py  compare_pdfs_util.py  digit_tests.py  find_common_substrings.py  get_file_data.py  importance_score.py  pdf_duplicate_pages.py  run_and_store_cross_pairs.py  train_result_classifiers.py  utils.py
tests/: basic_test.py  compare_pdfs_test.py  get_file_data_test.py  importance_score_test.py  utils_test.py
