[project]
name = "bluewave_test2"
version = "0.0.6"
authors = []
description = "Python script to analyze the similarity of two PDFs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "black==22.10.0",
    "boto3==1.26.59",
    "matplotlib==3.6.2",
    "numpy==1.23.5",
    "pandas==1.5.2",
    "Pillow==9.3.0",
    "pre-commit==2.20.0",
    "psycopg2==2.9.5",
    "pydivsufsort==0.0.6",
    "PyMuPDF==1.21.0",
    "pytest==7.2.0",
    "scikit-learn==1.1.3",
]
